src/objects/Answer__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>These Articles are created as a contingency for Migration. If the current content does not fit cleanly in Article Types, we will migrate ALL current content to this Article Type, then work in Phase 2 to engineer content to fit into other Article Types/Fields</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Password__c</fullName>
        <label>Content Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Article_Number__c</fullName>
        <label>Article Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <label>Answer</label>
    <pluralLabel>Answers</pluralLabel>
</CustomObject>